<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordSettingsActivity"
    android:tooltipText="Password"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <EditText android:id="@+id/old_pass_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/title_old_pass"
        android:layout_marginBottom="10dp"/>

    <EditText android:id="@+id/new_pass_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/title_new_pass"
        android:layout_marginBottom="10dp"/>

    <EditText android:id="@+id/renew_pass_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/title_renew_pass"
        android:layout_marginBottom="10dp"/>

    <Button android:id="@+id/accept_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:text="@string/title_accept"
        android:onClick="onAcceptButtonClick"/>

    <Button android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textStyle="bold"
        android:text="@string/title_cancel"
        android:onClick="onCancelButtonClick"/>

</LinearLayout>