<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".CreateTokenActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/token_image_splash"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/colorAddToken" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="100dp">

            <android.support.design.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:minHeight="300dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        app:hintTextAppearance="@style/LabelHintTextStyle">

                        <EditText android:id="@+id/token_theme_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/title_theme"
                            android:theme="@style/LabelEdiTextStyle" />

                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/black"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="250dp"
                        android:layout_weight="1"
                        app:hintTextAppearance="@style/LabelHintTextStyle">

                        <EditText
                            android:id="@+id/token_description_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="start"
                            android:hint="@string/title_description"
                            android:inputType="textMultiLine"
                            android:theme="@style/LabelEdiTextStyle"/>

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </android.support.design.card.MaterialCardView>

            <android.support.v7.widget.RecyclerView android:id="@+id/chip_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:clipToPadding="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button android:id="@+id/fad"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/CancelTokenButtonStyle"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_file_upload_black_24dp"
                    android:onClick="onClick"
                    android:text="@string/title_upload_file"
                    android:textSize="@dimen/createTokenButtonTextSize"/>

                <Button
                    android:id="@+id/save_token_button"
                    style="@style/CancelTokenButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:onClick="onClick"
                    android:text="@string/title_save_token"
                    android:textSize="@dimen/createTokenButtonTextSize"/>

            </LinearLayout>


            <Button
                android:id="@+id/send_token_button"
                style="@style/CreateTokenButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_send_button"
                android:onClick="onClick"
                android:text="@string/title_send_token"
                android:textSize="@dimen/createTokenButtonTextSize"
                android:textAlignment="textStart"/>

        </LinearLayout>

    </FrameLayout>

</ScrollView>